--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -200,8 +200,8 @@
     flex-wrap: wrap;
   }
 
-  .logement h2 {
-    padding: 5% 20% 10% 5%;
+  .toplist h2 {
+    padding: 5% 0 10% 5%;
     margin: 0;
   }
 
